# serializer version: 1
# name: test_main_success
  tuple(
    None,
    '''
      ✓ Uploading "some project"    0:00:00 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 29/29 bytes
      ✓ Uploading "another project" 0:00:00 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 32/32 bytes
      ✓ Transcoding "some project"    0:00:00
      ✓ Transcoding "another project" 0:00:00
                        ╷                           
        Title           │ URL                       
      ╶─────────────────┼──────────────────────────╴
        some project    │ https://soundcloud.com/1  
        another project │ https://soundcloud.com/2  
                        ╵                           
    ''',
    '',
    dict({
      'get': _CallList([
        _Call(
          '',
          tuple(
            'https://api-v2.soundcloud.com/users/41506/tracks',
          ),
          dict({
            'headers': dict({
              'Accept': 'application/json',
              'Authorization': 'OAuth stub-fake-token',
              'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
              'X-Test-Additional-Header': '1',
            }),
            'params': dict({
              'limit': 250,
            }),
            'timeout': 10,
          }),
        ),
        _Call(
          '',
          tuple(
            'https://api-v2.soundcloud.com/uploads/stub-uid/track-transcoding',
          ),
          dict({
            'headers': dict({
              'Accept': 'application/json',
              'Authorization': 'OAuth stub-fake-token',
              'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
              'X-Test-Additional-Header': '1',
            }),
          }),
        ),
        _Call(
          '',
          tuple(
            'https://api-v2.soundcloud.com/uploads/stub-uid/track-transcoding',
          ),
          dict({
            'headers': dict({
              'Accept': 'application/json',
              'Authorization': 'OAuth stub-fake-token',
              'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
              'X-Test-Additional-Header': '1',
            }),
          }),
        ),
      ]),
      'post': _CallList([
        _Call(
          '',
          tuple(
            'https://api-v2.soundcloud.com/uploads/track-upload-policy',
          ),
          dict({
            'headers': dict({
              'Accept': 'application/json',
              'Authorization': 'OAuth stub-fake-token',
              'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
              'X-Test-Additional-Header': '1',
            }),
            'json': dict({
              'filename': 'some project.wav',
              'filesize': 29,
            }),
          }),
        ),
        _Call(
          '',
          tuple(
            'https://api-v2.soundcloud.com/uploads/stub-uid/track-transcoding',
          ),
          dict({
            'headers': dict({
              'Accept': 'application/json',
              'Authorization': 'OAuth stub-fake-token',
              'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
              'X-Test-Additional-Header': '1',
            }),
          }),
        ),
        _Call(
          '',
          tuple(
            'https://api-v2.soundcloud.com/uploads/track-upload-policy',
          ),
          dict({
            'headers': dict({
              'Accept': 'application/json',
              'Authorization': 'OAuth stub-fake-token',
              'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
              'X-Test-Additional-Header': '1',
            }),
            'json': dict({
              'filename': 'another project.wav',
              'filesize': 32,
            }),
          }),
        ),
        _Call(
          '',
          tuple(
            'https://api-v2.soundcloud.com/uploads/stub-uid/track-transcoding',
          ),
          dict({
            'headers': dict({
              'Accept': 'application/json',
              'Authorization': 'OAuth stub-fake-token',
              'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
              'X-Test-Additional-Header': '1',
            }),
          }),
        ),
      ]),
      'put': _CallList([
        _Call(
          '',
          tuple(
            'https://api-v2.soundcloud.com/tracks/soundcloud:tracks:1',
          ),
          dict({
            'headers': dict({
              'Accept': 'application/json',
              'Authorization': 'OAuth stub-fake-token',
              'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
              'X-Test-Additional-Header': '1',
            }),
            'json': dict({
              'track': dict({
                'replacing_original_filename': 'some project.wav',
                'replacing_uid': 'stub-uid',
                'snippet_presets': dict({
                  'end_seconds': 20,
                  'start_seconds': 0,
                }),
                'title': 'some project',
              }),
            }),
          }),
        ),
        _Call(
          '',
          tuple(
            'https://api-v2.soundcloud.com/tracks/soundcloud:tracks:2',
          ),
          dict({
            'headers': dict({
              'Accept': 'application/json',
              'Authorization': 'OAuth stub-fake-token',
              'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
              'X-Test-Additional-Header': '1',
            }),
            'json': dict({
              'track': dict({
                'replacing_original_filename': 'another project.wav',
                'replacing_uid': 'stub-uid',
                'snippet_presets': dict({
                  'end_seconds': 20,
                  'start_seconds': 0,
                }),
                'title': 'another project',
              }),
            }),
          }),
        ),
      ]),
      'put_file': _CallList([
        _Call(
          '',
          tuple(
            'https://some-url',
            'TMP_PATH_HERE/path/to/some project/some project.wav',
          ),
          dict({
            'headers': dict({
              'some-uploader-id': 'some-uploader-value',
            }),
            'progress': 'CALLABLE_HERE',
            'timeout': 600,
          }),
        ),
        _Call(
          '',
          tuple(
            'https://some-url',
            'TMP_PATH_HERE/path/to/another project/another project.wav',
          ),
          dict({
            'headers': dict({
              'some-uploader-id': 'some-uploader-value',
            }),
            'progress': 'CALLABLE_HERE',
            'timeout': 600,
          }),
        ),
      ]),
    }),
  )
# ---
# name: test_main_success_dry_run
  tuple(
    None,
    '''
      ✓ Uploading "some project"    0:00:00 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 29/29 bytes
      ✓ Uploading "another project" 0:00:00 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 32/32 bytes
      ✓ Transcoding "some project"    0:00:00
      ✓ Transcoding "another project" 0:00:00
                        ╷                           
        Title           │ URL                       
      ╶─────────────────┼──────────────────────────╴
        some project    │ https://soundcloud.com/1  
        another project │ https://soundcloud.com/2  
                        ╵                           
    ''',
    '',
    dict({
      'get': _CallList([
        _Call(
          '',
          tuple(
            'https://api-v2.soundcloud.com/users/41506/tracks',
          ),
          dict({
            'headers': dict({
              'Accept': 'application/json',
              'Authorization': 'OAuth stub-fake-token',
              'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
              'X-Test-Additional-Header': '1',
            }),
            'params': dict({
              'limit': 250,
            }),
            'timeout': 10,
          }),
        ),
      ]),
      'post': _CallList([
      ]),
      'put': _CallList([
      ]),
      'put_file': _CallList([
      ]),
    }),
  )
# ---
# name: test_main_tracks_limit_warning
  tuple(
    None,
    '''
      Warning: SoundCloud tracks response returned 250 tracks (limit 250); pagination 
      may be required.
      ⚠ Uploading "some project" (already uploaded)    0:00:00              0.0/1.2 MB
      ⚠ Uploading "another project" (already uploaded) 0:00:00              0.0/1.2 MB
  
    ''',
    '',
    dict({
      'get': _CallList([
        _Call(
          '',
          tuple(
            'https://api-v2.soundcloud.com/users/41506/tracks',
          ),
          dict({
            'headers': dict({
              'Accept': 'application/json',
              'Authorization': 'OAuth stub-fake-token',
              'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
              'X-Test-Additional-Header': '1',
            }),
            'params': dict({
              'limit': 250,
            }),
            'timeout': 10,
          }),
        ),
      ]),
      'post': _CallList([
      ]),
      'put': _CallList([
      ]),
      'put_file': _CallList([
      ]),
    }),
  )
# ---
# name: test_main_tracks_newer
  tuple(
    None,
    '''
      ⚠ Uploading "some project" (already uploaded)    0:00:00              0.0/1.2 MB
      ⚠ Uploading "another project" (already uploaded) 0:00:00              0.0/1.2 MB
  
    ''',
    '',
    dict({
      'get': _CallList([
        _Call(
          '',
          tuple(
            'https://api-v2.soundcloud.com/users/41506/tracks',
          ),
          dict({
            'headers': dict({
              'Accept': 'application/json',
              'Authorization': 'OAuth stub-fake-token',
              'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
              'X-Test-Additional-Header': '1',
            }),
            'params': dict({
              'limit': 250,
            }),
            'timeout': 10,
          }),
        ),
      ]),
      'post': _CallList([
      ]),
      'put': _CallList([
      ]),
      'put_file': _CallList([
      ]),
    }),
  )
# ---
# name: test_main_tracks_newer_dry_run
  tuple(
    None,
    '''
      ⚠ Uploading "some project" (already uploaded)    0:00:00              0.0/1.2 MB
      ⚠ Uploading "another project" (already uploaded) 0:00:00              0.0/1.2 MB
  
    ''',
    '',
    dict({
      'get': _CallList([
        _Call(
          '',
          tuple(
            'https://api-v2.soundcloud.com/users/41506/tracks',
          ),
          dict({
            'headers': dict({
              'Accept': 'application/json',
              'Authorization': 'OAuth stub-fake-token',
              'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
              'X-Test-Additional-Header': '1',
            }),
            'params': dict({
              'limit': 250,
            }),
            'timeout': 10,
          }),
        ),
      ]),
      'post': _CallList([
      ]),
      'put': _CallList([
      ]),
      'put_file': _CallList([
      ]),
    }),
  )
# ---
# name: test_main_tracks_not_found
  tuple(
    SystemExit(2),
    '''
      ✗ Uploading "some project" (not found in SoundCloud)    0:00:00         0/29    
                                                                              bytes   
      ✗ Uploading "another project" (not found in SoundCloud) 0:00:00         0/32    
                                                                              bytes   
  
    ''',
    '''
      not found in SoundCloud: TMP_PATH_HERE/path/to/some project/some project.wav
      not found in SoundCloud: TMP_PATH_HERE/path/to/another project/another project.wav
  
    ''',
    dict({
      'get': _CallList([
        _Call(
          '',
          tuple(
            'https://api-v2.soundcloud.com/users/41506/tracks',
          ),
          dict({
            'headers': dict({
              'Accept': 'application/json',
              'Authorization': 'OAuth stub-fake-token',
              'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
              'X-Test-Additional-Header': '1',
            }),
            'params': dict({
              'limit': 250,
            }),
            'timeout': 10,
          }),
        ),
        _Call(
          '().json',
          tuple(
          ),
          dict({
          }),
        ),
      ]),
      'post': _CallList([
      ]),
      'put': _CallList([
      ]),
      'put_file': _CallList([
      ]),
    }),
  )
# ---
# name: test_main_transcode_failure
  tuple(
    SystemExit(2),
    '''
      ✓ Uploading "some project" 0:00:00 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 29/29 bytes
      Transcoding "some project" (HTTP Error 422: Unprocessable Content (with body "… 
  
    ''',
    '''
      HTTP Error 422: Unprocessable Content (with body "Transcoding failed: Invalid audio format")
  
    ''',
    dict({
      'get': _CallList([
        _Call(
          '',
          tuple(
            'https://api-v2.soundcloud.com/users/41506/tracks',
          ),
          dict({
            'headers': dict({
              'Accept': 'application/json',
              'Authorization': 'OAuth stub-fake-token',
              'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
              'X-Test-Additional-Header': '1',
            }),
            'params': dict({
              'limit': 250,
            }),
            'timeout': 10,
          }),
        ),
        _Call(
          '',
          tuple(
            'https://api-v2.soundcloud.com/uploads/stub-uid/track-transcoding',
          ),
          dict({
            'headers': dict({
              'Accept': 'application/json',
              'Authorization': 'OAuth stub-fake-token',
              'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
              'X-Test-Additional-Header': '1',
            }),
          }),
        ),
      ]),
      'post': _CallList([
        _Call(
          '',
          tuple(
            'https://api-v2.soundcloud.com/uploads/track-upload-policy',
          ),
          dict({
            'headers': dict({
              'Accept': 'application/json',
              'Authorization': 'OAuth stub-fake-token',
              'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
              'X-Test-Additional-Header': '1',
            }),
            'json': dict({
              'filename': 'some project.wav',
              'filesize': 29,
            }),
          }),
        ),
        _Call(
          '',
          tuple(
            'https://api-v2.soundcloud.com/uploads/stub-uid/track-transcoding',
          ),
          dict({
            'headers': dict({
              'Accept': 'application/json',
              'Authorization': 'OAuth stub-fake-token',
              'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
              'X-Test-Additional-Header': '1',
            }),
          }),
        ),
      ]),
      'put': _CallList([
      ]),
      'put_file': _CallList([
        _Call(
          '',
          tuple(
            'https://some-url',
            'TMP_PATH_HERE/path/to/some project/some project.wav',
          ),
          dict({
            'headers': dict({
              'some-uploader-id': 'some-uploader-value',
            }),
            'progress': 'CALLABLE_HERE',
            'timeout': 600,
          }),
        ),
      ]),
    }),
  )
# ---
